k8s/security/security.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: security
  name: security-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: security.cluster.local
      http:
        paths:
          - path: "/sonarr"
            pathType: Prefix
            backend:
              service:
                name: sonarr-service
                port:
                  number: 80
